--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "firebase-admin": "^11.11.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
