--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
